--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background: #000;
+            background: #333;
         }
 
         canvas {
-            border: 1px solid white;
+            border: 1px solid #555;
+            box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.3);
+
         }
     </style>
 </head>
