--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vaporized Chess</title>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <!-- BEGINNING of PWA stuff -->
+    <meta name="theme-color" content="#333333">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="icon" href="/icons/icon-192x192.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="/icons/icon-512x512.png">
+    <!-- END of PWA stuff -->
 
     <style>
+        @font-face {
+            font-family: 'Press Start 2P';
+            src: url('/fonts/PressStart2P-Regular.ttf') format('truetype');
+            font-weight: normal;
+            font-style: normal;
+        }
+
         body {
             display: flex;
             justify-content: center;
@@ -77,11 +89,11 @@
             <div></div>
             <div id="btn-enter" class="btn">ENTER</div>
             <div id="btn-left" class="btn">LEFT</div>
-            <div></div>
+            <div id="btn-down" class="btn">DOWN</div>
             <div id="btn-right" class="btn">RIGHT</div>
             <div></div>
             <div></div>
-            <div id="btn-down" class="btn">DOWN</div>
+            <div></div>
             <div></div>
             <div></div>
         </div>
@@ -101,6 +113,15 @@
             { class: 'btn-right', code: 'ArrowRight' },
         ].forEach(m => document.getElementById(m.class).addEventListener('click', () => engine.onKeyPress(m.code)));
 
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js').then((registration) => {
+                    console.log('Service Worker registered with scope:', registration.scope);
+                }).catch((error) => {
+                    console.error('Service Worker registration failed:', error);
+                });
+            });
+        }
     </script>
 </body>
 
