--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <style>
         @font-face {
             font-family: 'Press Start 2P';
-            src: url('/fonts/PressStart2P-Regular.ttf') format('truetype');
+            src: url('./fonts/PressStart2P-Regular.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
         }
