--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" href="/icons/icon-192x192.png" sizes="192x192">
     <link rel="apple-touch-icon" href="/icons/icon-512x512.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <!-- END of PWA stuff -->
 
     <style>
