--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
             transform: scale(0.85);
             box-shadow: none;
         }
+
+        .btn.green {
+            background-color: #676;
+        }
     </style>
 </head>
 
@@ -86,14 +90,14 @@
     <div class="scaled-area">
         <canvas id="gameCanvas"></canvas>
         <div class="a">
-            <div></div>
             <div id="btn-up" class="btn">UP</div>
             <div></div>
-            <div id="btn-enter" class="btn">ENTER</div>
-            <div id="btn-left" class="btn">LEFT</div>
-            <div id="btn-down" class="btn">DOWN</div>
-            <div id="btn-right" class="btn">RIGHT</div>
             <div></div>
+            <div id="btn-enter" class="btn green">ENTER</div>
+            <div id="btn-down" class="btn">DOWN</div>
+            <div></div>
+            <div id="btn-left" class="btn">LEFT</div>
+            <div id="btn-right" class="btn">RIGHT</div>
             <div></div>
             <div></div>
             <div></div>
