--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             font-style: normal;
         }
 
+        html,
+        body {
+            overscroll-behavior: none;
+            touch-action: none;
+        }
+
         body {
             display: flex;
             justify-content: center;
@@ -31,6 +37,11 @@
             background: #333;
             font-family: 'Press Start 2P', monospace;
             font-size: 2vh;
+            user-select: none;
+            -webkit-user-select: none;
+            /* Safari */
+            -ms-user-select: none;
+            /* Internet Explorer/Edge */
         }
 
         .scaled-area {
@@ -57,7 +68,7 @@
             grid-template-rows: repeat(3, 1fr);
             gap: 10px;
             padding: 10px;
-            color: white;
+            color: #FFF1E8;
             justify-items: center;
             align-items: center;
         }
@@ -83,6 +94,34 @@
         .btn.green {
             background-color: #676;
         }
+
+        #overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            backdrop-filter: blur(5px);
+            /* Adjust the blur intensity here */
+            z-index: 1;
+            display: none;
+        }
+
+        #install-button {
+            padding: 10px 20px;
+            font-size: 3vh;
+            color: #FFF1E8;
+            background-color: #7E2553;
+            padding: 3vh;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-family: 'Press Start 2P', monospace;
+        }
     </style>
 </head>
 
@@ -103,6 +142,10 @@
             <div></div>
             <div></div>
         </div>
+        <div id="overlay">
+            <button id="install-button">Install me!</button>
+        </div>
+
     </div>
     <script type="module">
         import * as engine from './engine.mjs';
@@ -119,6 +162,26 @@
             { class: 'btn-right', code: 'ArrowRight' },
         ].forEach(m => document.getElementById(m.class).addEventListener('click', () => engine.onKeyPress(m.code)));
 
+        // PWA code
+        let deferredPrompt;
+        window.addEventListener('beforeinstallprompt', (e) => {
+            e.preventDefault();
+            deferredPrompt = e;
+            const overlay = document.getElementById('overlay');
+            overlay.style.display = 'flex';
+            const installButton = document.getElementById('install-button');
+            installButton.addEventListener('click', async () => {
+                document.getElementById('overlay').style.display = 'none';
+                if (deferredPrompt) {
+                    deferredPrompt.prompt();
+                    const { outcome } = await deferredPrompt.userChoice;
+                    console.log(`User choice: ${outcome}`);
+                    deferredPrompt = null;
+                }
+            });
+        });
+
+        document.addEventListener("touchstart", function () { }, true);
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
                 navigator.serviceWorker.register('/service-worker.js').then((registration) => {
